fix: поправил стили для overflow

--- a/src/components/burger-constructor/burger-constructor-layout/burger-constructor-layout.module.scss
+++ b/src/components/burger-constructor/burger-constructor-layout/burger-constructor-layout.module.scss
@@ -1,5 +1,5 @@
 .wrapper__list {
     overflow-y: scroll;
 
-    max-height: 60vh;
+    max-height: 50vh;
 }
