--- a/src/components/burger-ingridients/ingridients-list/ingridients-list.module.scss
+++ b/src/components/burger-ingridients/ingridients-list/ingridients-list.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     overflow-y: scroll;
-    max-height: 70vh;
+    max-height: 74vh;
 }
 
 .ingridient {
